minor ui issue - tooltip for expand/collapse was under row buttons. NB tooltip for row buttons still shows under expand/collapse, trying to figure out why

--- a/app/wenk.css
+++ b/app/wenk.css
@@ -23,6 +23,7 @@
     pointer-events: none;
     display: block;
     opacity: 0;
+    z-index: 1;
     visibility: hidden;
     -webkit-transition: all .25s;
     transition: all .25s;
@@ -47,7 +48,6 @@
     display: block;
     opacity: 1;
     visibility: visible;
-    z-index: 0;
     -webkit-transform: translate(-25%, -5px);
             transform: translate(-25%, -5px);
 }
